; ModuleID = '/home/carl/AnghaBench/git/trace2/extr_tr2_cfg.c_tr2_cfg_free_patterns.c'
source_filename = "/home/carl/AnghaBench/git/trace2/extr_tr2_cfg.c_tr2_cfg_free_patterns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tr2_cfg_patterns = common dso_local global i64 0, align 8
@tr2_cfg_count_patterns = common dso_local global i64 0, align 8
@tr2_cfg_loaded = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tr2_cfg_free_patterns() #0 {
  %1 = load i64, i64* @tr2_cfg_patterns, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @tr2_cfg_patterns, align 8
  %5 = call i32 @strbuf_list_free(i64 %4)
  br label %6

6:                                                ; preds = %3, %0
  store i64 0, i64* @tr2_cfg_count_patterns, align 8
  store i64 0, i64* @tr2_cfg_loaded, align 8
  ret void
}

declare dso_local i32 @strbuf_list_free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
